Add model load / unload apis
